// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H6 component should accept and render passed in styles 1`] = `
.c0 {
  color: #505050;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  margin: initial;
}

<h6
  className="c0 toneu3-2 ctXJce"
>
  Salmon text
</h6>
`;

exports[`the H6 component should render 1`] = `
.c0 {
  color: #505050;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  margin: initial;
}

<h6
  className="c0 toneu3-2 ctXJce"
>
  Default H6 text
</h6>
`;

exports[`the H6 component should render a loading state 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
}

.c1 {
  height: 0.75rem;
  margin: 0 0 calc(1.125rem - 0.75rem) 0;
}

<mark
  className="c0 show-loading-animation ra2rjz-1 c1 custom-placeholder"
/>
`;

exports[`the H6 component should render a loading state via context 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
}

.c1 {
  height: 0.75rem;
  margin: 0 0 calc(1.125rem - 0.75rem) 0;
}

<mark
  className="c0 show-loading-animation ra2rjz-1 c1 custom-placeholder"
/>
`;

exports[`the H6 component should render a loading state with vertical rhythm (withMargins) 1`] = `
.c0 {
  background: #A5A5A5;
  border-radius: 16px;
  display: block;
  height: 1rem;
}

.c1 {
  height: 0.75rem;
  margin: 0 0 0.5625rem 0;
}

<mark
  className="c0 show-loading-animation ra2rjz-1 c1 custom-placeholder"
/>
`;

exports[`the H6 component should render with vertical rhythm (withMargins) 1`] = `
.c0 {
  color: #505050;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  margin: 0 0 0.5625rem 0;
}

<h6
  className="c0 toneu3-2 ctXJce"
>
  H6 text with vertical rhythm styled via margin.
</h6>
`;
